...
                                                                   preferredStyle: .alert)
        
        let okAction: UIAlertAction = UIAlertAction(title: confirmButtonTitle,
                                                    style: .default) { (action) in
                                                        confirmAction?()
        }
        okAction.accessibilityLabel = "Alert.Ok"
        
        if let cancelTitle = cancelButtonTitle {
            let cancelAction: UIAlertAction = UIAlertAction(title: cancelTitle,
                                                            style: .cancel,
                                                            handler: nil)
            cancelAction.accessibilityLabel = "Alert.Cancel"
...
