...
//MARK: Private methods
extension ProductViewController {
    
    final fileprivate func setupAccessibilities() {
        view.accessibilityIdentifier = "ProductViewController"
        reserveButton.isAccessibilityElement = true
        reserveButton.accessibilityIdentifier = "ProductViewController.ReserveBtn"
    }
    
    final fileprivate func setupNavigationBar() {
        title = vm.getProductName()
    }
    
...
