...

//MARK: Private methods
extension HomeViewController {
    
    final fileprivate func setupAccessibilities() {
        view.accessibilityIdentifier = "HomeViewController"
        tableView.accessibilityIdentifier = "HomeTableView"
    }
    
    final fileprivate func setupNavigationBar() {
        navigationController?.navigationBar.topItem?.titleView = titleImageView
        navigationItem.backBarButtonItem = UIBarButtonItem(title: "Home",
                                                           style: .plain,
...
